a pdf renamed to avoid spaces as RTD not showing pdfs

--- a/mkdocs/docs/Dissertations/24. Confidence Intervals.md
+++ b/mkdocs/docs/Dissertations/24. Confidence Intervals.md
@@ -3,14 +3,14 @@
      responsive-wrapper-wxh-572x612"
      style="-webkit-overflow-scrolling: touch; overflow: auto;">
 
-<iframe src="/Dissertations/24. Confidence Intervals.pdf"> 
+<iframe src="/Dissertations/24_Confidence_Intervals.pdf"> 
 <p style="font-size: 110%;"><em><strong>ERROR: </strong>  
-There seems to be a problem opening in your browser. Either try another browser or you could download from or view </em> <a href="/Dissertations/24. Confidence Intervals.pdf">here</a>
+There seems to be a problem opening in your browser. Either try another browser or you could download from or view </em> <a href="/Dissertations/24_Confidence_Intervals">here</a>
 </iframe>
     
   </div>
 </div>
 
 <div>
-<a href="/Dissertations/24. Confidence Intervals.pdf">Download</a>
+<a href="/Dissertations/24_Confidence_Intervals">Download</a>
 </div>
